修正未顯示貼文創建時間問題
